--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md-4 image-wrapper">
+            <div class="col-12 col-md-5 image-wrapper">
                 <img class="w-100" src="assets/images/brigdeu.png" alt="Mobirise Website Builder">
             </div>
             <div class="col-12 col-md">
@@ -107,8 +107,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <hr class="line">
-                <p class="mbr-text align-center mbr-fonts-style my-4 display-5">
-                    <em>A Brigadeiruda foi fundada em 20**...&nbsp;<br>dotada dos mais variáveis sabores para fazer do seu momento o mais saboroso possível, pois os melhores momentos pedem pelo melhor brigadeiro.&nbsp;</em>❤️<br></p>
+                <p class="mbr-text align-center mbr-fonts-style my-4 display-7">
+                    <em>A Brigadeiruda foi fundada em 20**... Fruto do meu amor pela confeitaria. Era um hobby de final de semana e para presentear amigos, que virou profissão.<br>E&nbsp; agora estou aqui para fazer do seu momento o mais saboroso, pois os melhores momentos pedem pelo melhor brigadeiro.&nbsp;</em>❤️<br><br><strong>Eduarda Motta<br>Proprietária da Brigadeiruda</strong></p>
                 <hr class="line">
             </div>
         </div>
@@ -429,7 +429,7 @@
         </div>
         
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2476986" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2476986" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
